[FIX] Standardizes text and UI labels for consistency
Updates user-facing text in localization files to ensure consistent terminology.

Renames modal button labels for clarity by switching to more descriptive keys.

Removes unused header elements and styles from the sidebar for a cleaner UI.

--- a/_locales/en_AU/messages.json
+++ b/_locales/en_AU/messages.json
@@ -16,7 +16,7 @@
     "description": "Message shown when the user tries to add a hop on an unsupported page"
   },
   "no_hops": {
-    "message": "No hops on this page. Add the first one by right-clicking on the element.",
+    "message": "No hops on this page. Add the first one by right-clicking on the page.",
     "description": "Message shown when there are no hops available on the current page"
   },
   "hop_title": {
