[MOD] Added load and save

--- a/_locales/am/messages.json
+++ b/_locales/am/messages.json
@@ -34,5 +34,13 @@
   "cancel_button": {
     "message": "ሰርዝ",
     "description": "በሞዳል ውስጥ መዘዋወሪያ ማከል ለመቆም የሚጠቀምበት አዝራር ጽሑፍ"
+  },
+  "load_hops": {
+    "message": "ከፋይል መዘዋወሪያዎችን አሰናብት",
+    "description": "ከፋይል መዘዋወሪያዎችን ለመጫን የሚጠቀምበት አዝራር ጽሑፍ"
+  },
+  "save_hops": {
+    "message": "መዘዋወሪያዎችን በፋይል ውስጥ ያስቀምጡ",
+    "description": "መዘዋወሪያዎችን በፋይል ለማስቀመጥ የሚጠቀምበት አዝራር ጽሑፍ"
   }
 }
