--- a/_locales/ar/messages.json
+++ b/_locales/ar/messages.json
@@ -33,6 +33,14 @@
   },
   "cancel_button": {
     "message": "إلغاء",
-    "description": "نص زر إلغاء إضافة الانتقال"
+    "description": "نص الزر لإلغاء إضافة قفزة في النافذة المنبثقة"
+  },
+  "load_hops": {
+    "message": "تحميل القفزات من ملف",
+    "description": "نص الزر لتحميل القفزات من ملف"
+  },
+  "save_hops": {
+    "message": "حفظ القفزات في ملف",
+    "description": "نص الزر لحفظ القفزات في ملف"
   }
 }
