--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -33,6 +33,14 @@
   },
   "cancel_button": {
     "message": "Отказ",
-    "description": "Текст на бутона за отказ на добавяне на скок"
+    "description": "Текст на бутона за отменяне на добавянето на скок в модала"
+  },
+  "load_hops": {
+    "message": "Зареди скокове от файл",
+    "description": "Текст на бутона за зареждане на скокове от файл"
+  },
+  "save_hops": {
+    "message": "Запази скокове във файл",
+    "description": "Текст на бутона за запазване на скокове във файл"
   }
 }
