--- a/_locales/bn/messages.json
+++ b/_locales/bn/messages.json
@@ -34,5 +34,13 @@
   "cancel_button": {
     "message": "বাতিল",
     "description": "মোডাল-এ হপ যোগ বাতিল করার বোতামের টেক্সট"
+  },
+  "load_hops": {
+    "message": "ফাইল থেকে হপগুলি লোড করুন",
+    "description": "ফাইল থেকে হপগুলি লোড করার বোতামের টেক্সট"
+  },
+  "save_hops": {
+    "message": "হপগুলি ফাইলে সংরক্ষণ করুন",
+    "description": "হপগুলি ফাইলে সংরক্ষণ করার বোতামের টেক্সট"
   }
 }
