--- a/_locales/el/messages.json
+++ b/_locales/el/messages.json
@@ -34,5 +34,13 @@
   "cancel_button": {
     "message": "Ακύρωση",
     "description": "Κείμενο κουμπιού για ακύρωση προσθήκης άλματος στο modal"
+  },
+  "load_hops": {
+    "message": "Φόρτωση αλμάτων από αρχείο",
+    "description": "Κείμενο κουμπιού για φόρτωση αλμάτων από αρχείο"
+  },
+  "save_hops": {
+    "message": "Αποθήκευση αλμάτων σε αρχείο",
+    "description": "Κείμενο κουμπιού για αποθήκευση αλμάτων σε αρχείο"
   }
 }
