--- a/_locales/fa/messages.json
+++ b/_locales/fa/messages.json
@@ -34,5 +34,13 @@
   "cancel_button": {
     "message": "لغو",
     "description": "متن دکمه برای لغو افزودن پرش در مودال"
+  },
+  "load_hops": {
+    "message": "بارگذاری پرش‌ها از فایل",
+    "description": "متن دکمه برای بارگذاری پرش‌ها از فایل"
+  },
+  "save_hops": {
+    "message": "ذخیره پرش‌ها در فایل",
+    "description": "متن دکمه برای ذخیره پرش‌ها در فایل"
   }
 }
