--- a/_locales/gu/messages.json
+++ b/_locales/gu/messages.json
@@ -34,5 +34,13 @@
   "cancel_button": {
     "message": "રદ કરો",
     "description": "મોડલમાં હોપ ઉમેરવાનું રદ કરવા માટે બટન ટેક્સ્ટ"
+  },
+  "load_hops": {
+    "message": "ફાઇલમાંથી હોપ્સ લોડ કરો",
+    "description": "ફાઇલમાંથી હોપ્સ લોડ કરવા માટે બટન ટેક્સ્ટ"
+  },
+  "save_hops": {
+    "message": "ફાઇલમાં હોપ્સ સાચવો",
+    "description": "ફાઇલમાં હોપ્સ સાચવવા માટે બટન ટેક્સ્ટ"
   }
 }
