--- a/_locales/he/messages.json
+++ b/_locales/he/messages.json
@@ -34,5 +34,13 @@
   "cancel_button": {
     "message": "ביטול",
     "description": "טקסט כפתור לביטול הוספת קפיצה במודאל"
+  },
+  "load_hops": {
+    "message": "טען קפיצות מקובץ",
+    "description": "טקסט כפתור לטעינת קפיצות מקובץ"
+  },
+  "save_hops": {
+    "message": "שמור קפיצות לקובץ",
+    "description": "טקסט כפתור לשמירת קפיצות לקובץ"
   }
 }
