--- a/_locales/hi/messages.json
+++ b/_locales/hi/messages.json
@@ -34,5 +34,13 @@
   "cancel_button": {
     "message": "रद्द करें",
     "description": "मोडल में हॉप जोड़ना रद्द करने के लिए बटन टेक्स्ट"
+  },
+  "load_hops": {
+    "message": "फ़ाइल से हॉप्स लोड करें",
+    "description": "फ़ाइल से हॉप्स लोड करने के लिए बटन टेक्स्ट"
+  },
+  "save_hops": {
+    "message": "हॉप्स को फ़ाइल में सहेजें",
+    "description": "हॉप्स को फ़ाइल में सहेजने के लिए बटन टेक्स्ट"
   }
 }
