--- a/_locales/kn/messages.json
+++ b/_locales/kn/messages.json
@@ -34,5 +34,13 @@
   "cancel_button": {
     "message": "ರದ್ದುಮಾಡಿ",
     "description": "ಮೋಡಲ್‌ನಲ್ಲಿ ಹಾಪ್ ಸೇರಿಸುವುದನ್ನು ರದ್ದುಮಾಡಲು ಬಟನ್ ಪಠ್ಯ"
+  },
+  "load_hops": {
+    "message": "ಫೈಲ್‌ನಿಂದ ಹಾಪ್‌ಗಳನ್ನು ಲೋಡ್ ಮಾಡಿ",
+    "description": "ಫೈಲ್‌ನಿಂದ ಹಾಪ್‌ಗಳನ್ನು ಲೋಡ್ ಮಾಡಲು ಬಟನ್ ಪಠ್ಯ"
+  },
+  "save_hops": {
+    "message": "ಹಾಪ್‌ಗಳನ್ನು ಫೈಲ್‌ಗೆ ಉಳಿಸಿ",
+    "description": "ಹಾಪ್‌ಗಳನ್ನು ಫೈಲ್‌ಗೆ ಉಳಿಸಲು ಬಟನ್ ಪಠ್ಯ"
   }
 }
