--- a/_locales/ml/messages.json
+++ b/_locales/ml/messages.json
@@ -34,5 +34,13 @@
   "cancel_button": {
     "message": "റദ്ദാക്കുക",
     "description": "മോഡലിൽ ഹോപ്പ് ചേർക്കുന്നത് റദ്ദാക്കുന്നതിനുള്ള ബട്ടൺ ടെക്സ്റ്റ്"
+  },
+  "load_hops": {
+    "message": "ഫയലിൽ നിന്ന് ഹോപ്പുകൾ ലോഡ് ചെയ്യുക",
+    "description": "ഫയലിൽ നിന്ന് ഹോപ്പുകൾ ലോഡ് ചെയ്യുന്നതിനുള്ള ബട്ടൺ ടെക്സ്റ്റ്"
+  },
+  "save_hops": {
+    "message": "ഹോപ്പുകൾ ഫയലിലേക്ക് സംരക്ഷിക്കുക",
+    "description": "ഹോപ്പുകൾ ഫയലിലേക്ക് സംരക്ഷിക്കുന്നതിനുള്ള ബട്ടൺ ടെക്സ്റ്റ്"
   }
 }
