--- a/_locales/mr/messages.json
+++ b/_locales/mr/messages.json
@@ -34,5 +34,13 @@
   "cancel_button": {
     "message": "रद्द करा",
     "description": "मोडलमध्ये हॉप जोडणे रद्द करण्यासाठी बटन मजकूर"
+  },
+  "load_hops": {
+    "message": "फाइलमधून हॉप्स लोड करा",
+    "description": "फाइलमधून हॉप्स लोड करण्यासाठी बटन मजकूर"
+  },
+  "save_hops": {
+    "message": "हॉप्स फाइलमध्ये जतन करा",
+    "description": "हॉप्स फाइलमध्ये जतन करण्यासाठी बटन मजकूर"
   }
 }
