--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -34,5 +34,13 @@
   "cancel_button": {
     "message": "Отменить",
     "description": "Текст кнопки для отмены добавления метки в модальном окне"
+  },
+  "load_hops": {
+    "message": "Загрузить метки из файла",
+    "description": "Текст кнопки для загрузки меток из файла"
+  },
+  "save_hops": {
+    "message": "Сохранить метки в файл",
+    "description": "Текст кнопки для сохранения меток в файл"
   }
 }
