--- a/_locales/ta/messages.json
+++ b/_locales/ta/messages.json
@@ -34,5 +34,13 @@
   "cancel_button": {
     "message": "ரத்து",
     "description": "மோடலில் ஹாப் சேர்க்கும் செயல்பாட்டை ரத்து செய்ய பட்டன் உரை"
+  },
+  "load_hops": {
+    "message": "கோப்பிலிருந்து ஹாப்களை ஏற்றுக",
+    "description": "கோப்பிலிருந்து ஹாப்களை ஏற்றுவதற்கான பட்டன் உரை"
+  },
+  "save_hops": {
+    "message": "ஹாப்களை கோப்பில் சேமிக்கவும்",
+    "description": "ஹாப்களை கோப்பில் சேமிப்பதற்கான பட்டன் உரை"
   }
 }
