--- a/_locales/te/messages.json
+++ b/_locales/te/messages.json
@@ -34,5 +34,13 @@
   "cancel_button": {
     "message": "రద్దు చేయండి",
     "description": "మోడల్‌లో హాప్ జోడించడం రద్దు చేయడానికి బటన్ టెక్స్ట్"
+  },
+  "load_hops": {
+    "message": "ఫైల్ నుండి హాప్లను లోడ్ చేయండి",
+    "description": "ఫైల్ నుండి హాప్లను లోడ్ చేయడానికి బటన్ టెక్స్ట్"
+  },
+  "save_hops": {
+    "message": "హాప్లను ఫైల్‌లో సేవ్ చేయండి",
+    "description": "హాప్లను ఫైల్‌లో సేవ్ చేయడానికి బటన్ టెక్స్ట్"
   }
 }
