--- a/_locales/th/messages.json
+++ b/_locales/th/messages.json
@@ -34,5 +34,13 @@
   "cancel_button": {
     "message": "ยกเลิก",
     "description": "ข้อความปุ่มสำหรับยกเลิกการเพิ่มการกระโดดใน modal"
+  },
+  "load_hops": {
+    "message": "โหลดการกระโดดจากไฟล์",
+    "description": "ข้อความปุ่มสำหรับโหลดการกระโดดจากไฟล์"
+  },
+  "save_hops": {
+    "message": "บันทึกการกระโดดลงไฟล์",
+    "description": "ข้อความปุ่มสำหรับบันทึกการกระโดดลงไฟล์"
   }
 }
