--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -34,5 +34,13 @@
   "cancel_button": {
     "message": "Скасувати",
     "description": "Текст кнопки для скасування додавання переходу в модальному вікні"
+  },
+  "load_hops": {
+    "message": "Завантажити переходи з файлу",
+    "description": "Текст кнопки для завантаження переходів з файлу"
+  },
+  "save_hops": {
+    "message": "Зберегти переходи у файл",
+    "description": "Текст кнопки для збереження переходів у файл"
   }
 }
