--- a/_locales/pt_PT/messages.json
+++ b/_locales/pt_PT/messages.json
@@ -34,5 +34,13 @@
   "cancel_button": {
     "message": "Cancelar",
     "description": "Texto do botão para cancelar a adição de um salto no modal"
+  },
+  "load_hops": {
+    "message": "Carregar saltos do ficheiro",
+    "description": "Texto do botão para carregar saltos de um ficheiro"
+  },
+  "save_hops": {
+    "message": "Guardar saltos no ficheiro",
+    "description": "Texto do botão para guardar saltos num ficheiro"
   }
 }
